[package]
name = "trove-manager"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trove_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
dev = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
spl-stake-pool = {version = "1.0.0", features = ["no-entrypoint"] }
solana-program = "*"
chainlink_solana = "1.0.0"
pyth-solana-receiver-sdk ="0.1.0"